add functionality for user to post messages in chat

--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
@@ -2,7 +2,7 @@
 <div
   *ngFor="let conversation of conversations"
   class="title"
-  (click)="openHistory.emit(conversation.sender_id)"
+  (click)="this.openHistory.emit(conversation.sender_id)"
 >
   <div class="messageUser">
     <h4>{{conversation.sender}}: </h4>
