--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -49,6 +49,7 @@
         <h4>Upload Profile Photo</h4>
           <input type="file" ngModel name="image_url">
           <br />
+           <input type="file" ng2FileSelect [uploader]="uploader" />
         <div>
           <button type="submit" (click)="handleSaveChanges(form)">
             Save changes
