--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -7,6 +7,9 @@
 </customer-navbar>
 <div class="container">
   <div class="stylistContainer">
+    <div *ngIf="!!stylistsCloseToYou && stylistsCloseToYou.length===0">
+      <h1>There are no stylists close to you :(</h1>
+    </div>
     <div *ngFor="let stylist of stylistsCloseToYou">
       <close-to-you
         [stylistInformation]="stylist"
