--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -6,6 +6,7 @@
   justify-content: left;
   align-items: center;
   flex-direction: column;
+  background-image: linear-gradient(215deg, #A7A5C6 0%, #5D707F 100%);
 }
 
 h1 {
@@ -31,4 +32,23 @@ input {
 
 .woo {
   margin: 6em;
+}
+
+
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
