Add gradient to registration components

--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -1,4 +1,4 @@
-<div class="container poppaDiv">
+<div class="poppaDiv">
   <registration-header
     [routerLink]="['/login']"
     headerText="Login Page"
