--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -13,6 +13,8 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-image: linear-gradient(215deg, #A7A5C6 0%, #5D707F 100%);
+  padding: 1em;
 }
 
 .myForm {
@@ -22,7 +24,6 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border-top: 2px solid black;
 }
 
 .spanContainer {
