Add post style for stylist method

--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -49,8 +49,8 @@
             type="checkbox"
             id="service"
             ngModel
-            [name]="service"
-          >{{ service }}
+            [name]="service.id"
+          >{{ service.servicename }}
         </span>
     </span>
 <!-- <div *ngFor="let stylist of stylistsCloseToYou"> -->
