--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -1,12 +1,12 @@
 .poppaDiv {
   border-top: 2px solid black;
   width: 100%;
-  height: 75%;
+  height: 100vh;
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  background-image: linear-gradient(215deg, #A7A5C6 0%, #5D707F 100%);
+  background-image: linear-gradient(215deg, #f2efc7 0%, #ffeee2 100%);
 }
 
 h1 {
@@ -19,10 +19,9 @@ input {
 
 .myForm {
   width: 100%;
-  height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -31,7 +30,11 @@ input {
 }
 
 .woo {
-  margin: 6em;
+  margin: .5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 
