--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
@@ -13,7 +13,7 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: linear-gradient(215deg, #A7A5C6 0%, #5D707F 100%);
+  background-image: linear-gradient(215deg, #f2efc7 0%, #ffeee2 100%);
   padding: 2em;
   margin: 2em;
 }
