--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -8,11 +8,11 @@ input {
 
 .poppaDiv {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   background-image: linear-gradient(215deg, #f2efc7 0%, #ffeee2 100%);
   padding: 1em;
 }
@@ -21,9 +21,9 @@ input {
   height: 100%;
   flex: 1 1 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .spanContainer {
