--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
@@ -1,21 +1,12 @@
-h3 {
-  flex: 1 1 100%;
-}
-
-input {
-  background-color: #d3d3d3;
-}
 
 .poppaDiv {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   background-image: linear-gradient(215deg, #f2efc7 0%, #ffeee2 100%);
-  padding: 2em;
-  margin: 2em;
 }
 
 .myForm {
@@ -23,9 +14,16 @@ input {
   width: 65%;
   flex: 1 1 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   margin-top: 0px;
 }
 
+h3 {
+  flex: 1 1 100%;
+}
+
+input {
+  background-color: #d3d3d3;
+}
