Add required attribute to input box on signup pages

--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -9,6 +9,7 @@
     </div>
     <label for="form-group">Username</label>
       <input
+        required
         type="text"
         id="username"
         ngModel
@@ -16,6 +17,7 @@
     <br>
     <label for="form-group">Password</label>
       <input
+        required
         type="password"
         id="password"
         ngModel
@@ -23,6 +25,7 @@
     <br>
     <label for="form-group">Email Address</label>
       <input
+        required
         type="email"
         id="email"
         ngModel
