Re-render close to you component when search location changes

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -10,6 +10,7 @@
     <div *ngFor="let stylist of stylistsCloseToYou">
       <close-to-you
         [stylistInformation]="stylist"
+        [searchLocation]="searchLocation"
         [routerLink]="['/stylistProfile', stylist.id]"
       >
       </close-to-you>
