--- a/thesis-app/src/app/ui/payment/components/payment-input/payment-input.component.css
+++ b/thesis-app/src/app/ui/payment/components/payment-input/payment-input.component.css
@@ -1,4 +1,4 @@
-div {
+/*div {
   height: 3rem;
   border-radius: 5px;
   background-color: #77A0A9;
@@ -8,4 +8,4 @@ div {
 }
 span {
   color: #F4F1BB;
-}
+}*/
