--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -1,3 +1,4 @@
 <h4>{{name}}</h4>
+<img [src]="image_url" />
 <span class="glyphicon glyphicon-time">{{time}}</span>
 <span class="glyphicon glyphicon-home">{{phonenumber}}</span>
