--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -11,6 +11,7 @@
   >
     <booking
       [name]="confirmedBooking.name"
+      [image_url]="confirmedBooking.image_url"
       [time]="confirmedBooking.time"
       [phoneNumber]="confirmedBooking.phonenumber"
     >
@@ -21,6 +22,7 @@
   <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
     <booking
       [name]="dueBooking.name"
+      [image_url]="dueBooking.image_url"
       [time]="dueBooking.time"
       [phoneNumber]="dueBooking.phonenumber"
     >
@@ -39,6 +41,7 @@
   >
     <booking
       [name]="pendingBooking.name"
+      [image_url]="pendingBooking.image_url"
       [time]="pendingBooking.time"
       [phoneNumber]="pendingBooking.phonenumber"
     >
@@ -57,6 +60,7 @@
   >
     <booking
       [name]="confirmedBooking.name"
+      [image_url]="confirmedBooking.image_url"
       [time]="confirmedBooking.time"
       [phoneNumber]="confirmedBooking.phonenumber"
     >
@@ -67,6 +71,7 @@
   <div *ngFor="let dueBooking of profile.dueBookings">
     <booking
       [name]="dueBooking.name"
+      [image_url]="dueBooking.image_url"
       [time]="dueBooking.time"
       [phoneNumber]="dueBooking.phonenumber"
     >
@@ -81,6 +86,7 @@
   >
     <booking
       [name]="pendingBooking.name"
+      [image_url]="pendingBooking.image_url"
       [time]="pendingBooking.time"
       [phoneNumber]="pendingBooking.phonenumber"
     >
