--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -1,4 +1,5 @@
 <h4>{{name}}</h4>
 <img [src]="image_url" />
-<span class="glyphicon glyphicon-time">{{time}}</span>
-<span class="glyphicon glyphicon-home">{{phonenumber}}</span>
+<div class="glyphicon glyphicon-time">{{time}}</div>
+<div class="glyphicon glyphicon-earphone">{{phoneNumber}}</div>
+<div class="glyphicon glyphicon-home">{{location}}</div>
