--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -14,6 +14,7 @@
       [image_url]="confirmedBooking.image_url"
       [time]="confirmedBooking.time"
       [phoneNumber]="confirmedBooking.phonenumber"
+      [location]="confirmedBooking.location"
     >
     </booking>
   </div>
@@ -25,6 +26,7 @@
       [image_url]="dueBooking.image_url"
       [time]="dueBooking.time"
       [phoneNumber]="dueBooking.phonenumber"
+      [location]="dueBooking.location"
     >
     </booking>
     <payment-input
@@ -44,6 +46,7 @@
       [image_url]="pendingBooking.image_url"
       [time]="pendingBooking.time"
       [phoneNumber]="pendingBooking.phonenumber"
+      [location]="pendingBooking.location"
     >
     </booking>
     <button (click)="deleteBooking(pendingBooking.id, i)">Reject</button>
@@ -63,6 +66,7 @@
       [image_url]="confirmedBooking.image_url"
       [time]="confirmedBooking.time"
       [phoneNumber]="confirmedBooking.phonenumber"
+      [location]="confirmedBooking.location"
     >
     </booking>
   </div>
@@ -74,6 +78,7 @@
       [image_url]="dueBooking.image_url"
       [time]="dueBooking.time"
       [phoneNumber]="dueBooking.phonenumber"
+      [location]="dueBooking.location"
     >
     </booking>
     <button>Request Payment</button>
@@ -89,6 +94,7 @@
       [image_url]="pendingBooking.image_url"
       [time]="pendingBooking.time"
       [phoneNumber]="pendingBooking.phonenumber"
+      [location]="pendingBooking.location"
     >
     </booking>
     <button (click)="confirmBooking(pendingBooking.id, i)">Confirm</button>
