--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -1,4 +1,5 @@
-<h4>{{name}}</h4>
+<h4 *ngIf="isPending===true">{{name}} (pending)</h4>
+<h4 *ngIf="isPending===false">{{name}}</h4>
 <img [src]="image_url" />
 <div class="glyphicon glyphicon-time">{{time}}</div>
 <div class="glyphicon glyphicon-earphone">{{phoneNumber}}</div>
