fix customer payment confirmation

--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -50,7 +50,7 @@
       [location]="pendingBooking.location"
     >
     </booking>
-    <button (click)="deleteBooking(pendingBooking.id, i)">Reject</button>
+    <button (click)="declineBooking(pendingBooking.id, i)">Decline</button>
   </div>
 </div>
 
