--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -1,37 +1,33 @@
-<div class="poppaDiv">
+
   <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
-    <form class="myForm" (ngSubmit)="handleLogin(f)" #f="ngForm">
+    <form (ngSubmit)="handleLogin(f)" #f="ngForm">
       <label><h1>Login</h1></label>
-      <label for="form-group">Username</label>
+      <label>Username</label>
         <input
           type="text"
           id="username"
           ngModel
           name="username">
       <br>
-      <label for="form-group">Password</label>
+      <label>Password</label>
         <input
           type="password"
           id="password"
           ngModel
           name="password">
       <br>
-      <div class="row buttonContainer">
+      <div>
         <button
-          class="btn btn-primary btn-group"
           [routerLink]="['/signupuser']"
         >User Signup</button>
         <button
-          class="btn btn-primary btn-group"
-          [routerLink]="['/signupstylist']"
-        >Stylist Signup</button>
-        <button
-          class="btn btn-primary btn-group"
           type="submit"
         >Login</button>
       </div>
     </form>
-  <div class="woo">
-    <p class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-  </div>
-</div>
+
+    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <!-- <button
+          class="btn btn-primary btn-group"
+          [routerLink]="['/signupstylist']"
+        >Stylist Signup</button> -->
