--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -1,5 +1,7 @@
-
-  <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
+<div class="componentWrapper">
+  <registration-header headerText="Login Page"></registration-header>
+  <div class="loginWrapper">
+    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     <form (ngSubmit)="handleLogin(f)" #f="ngForm">
       <label><h1>Login</h1></label>
       <label>Username</label>
@@ -25,9 +27,5 @@
         >Login</button>
       </div>
     </form>
-
-    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        <!-- <button
-          class="btn btn-primary btn-group"
-          [routerLink]="['/signupstylist']"
-        >Stylist Signup</button> -->
+  </div>
+</div>
