--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -35,33 +35,22 @@
         </div>
       </div>
       <div class="buttonContainer">
-        <button (click)="toggleModal()">Request a cut</button>
+        <button (click)="toggleMessageModal()">Message me</button>
+        <button (click)="toggleBookingModal()">Book with me</button>
       </div>
     </div>
   </div>
 </div>
 
+<!-- Message Modal -->
 <div class="container row modalWrapper" [style.display]="getStyle()">
   <div class="bigWrapper">
     <form
       (ngSubmit)="submitMessage(f)" #f="ngForm"
         class="container row modalContent">
-      <span (click)="toggleModal()">&times;</span>
+      <span (click)="toggleMessageModal()">&times;</span>
       <div class="container row miniWrapper">
         <h4>Send a message</h4>
-        <div class="row location modeitem">
-          Where would you like your hair cut? Enter an address.
-          <input name="location" ngModel/>
-        </div>
-        <div class="row heading modeitem">
-          Header:
-          <input name="subjectHeading" placeholder="Subject Heading" ngModel/>
-          <br>
-          <br>
-          Enter a time and date you would like your hair cut:
-          <input name="time" type="date" ngModel />
-          <br>
-        </div>
         <div class="row message modeitem">
           <textarea name="body" ngModel>Body of the message</textarea>
           <button class="btn btn-primary" type="submit">Send</button>
@@ -69,4 +58,15 @@
       </div>
     </form>
   </div>
+</div>
+
+<!-- Booking Modal -->
+<div *ngIf="!!isShowBookingModal">
+  <form (ngSubmit)="submitBooking(bookingForm.value)" #bookingForm="ngForm">
+    Enter a time and date you would like your hair cut:
+    <input name="time" type="date" ngModel />
+    Where would you like your hair cut? Enter an address.
+    <input name="location" ngModel />
+    <button type="submit">Book</button>
+  </form>
 </div>
