--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -4,31 +4,31 @@
     <div class="flexItem">
       <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     </div>
-    <div class="flexItem">
+    <div class="flexItem loginButtons">
       <form (ngSubmit)="handleLogin(f)" #f="ngForm">
-        <label>Username</label>
+        <h5>Username</h5>
           <input
             type="text"
             id="username"
             ngModel
             name="username">
         <br>
-        <label>Password</label>
+        <h5>Password</h5>
           <input
             type="password"
             id="password"
             ngModel
             name="password">
         <br>
-        <div>
-          <button
-            [routerLink]="['/signupuser']"
-          >User Signup</button>
+        <div class="btnContainer">
           <button
             type="submit"
-          >Login</button>
+          >Sign In</button>
         </div>
       </form>
     </div>
   </div>
 </div>
+          <!-- <button
+            [routerLink]="['/signupuser']"
+          >Create Account</button> -->
