--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -66,3 +66,14 @@ button {
   border-radius: 20px;
   margin-top: 1em;
 }
+
+a {
+  align-self: flex-end;
+  margin-right: 14em;
+  color: #F9B71A;
+  border-bottom: 1px solid #F9B71A;
+}
+
+a:hover {
+  color: blue;
+}
