--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -28,7 +28,5 @@
       </form>
     </div>
   </div>
+  <a [routerLink]="['/signupuser']">Create Account</a>
 </div>
-          <!-- <button
-            [routerLink]="['/signupuser']"
-          >Create Account</button> -->
