Reset css on user signup component

--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -1,39 +1,34 @@
-<div class="container poppaDiv">
-  <registration-header
-    [routerLink]="['/login']"
-    headerText="Login Page"
-    logo="insert logo url here"></registration-header>
-  <form class="myForm" (ngSubmit)="handleSignup(f)" #f="ngForm">
-    <div>
-      <h3>Please Enter Your User Info</h3>
-    </div>
-    <label for="form-group">Username</label>
-      <input
-        required
-        type="text"
-        id="username"
-        ngModel
-        name="username">
-    <br>
-    <label for="form-group">Password</label>
-      <input
-        required
-        type="password"
-        id="password"
-        ngModel
-        name="password">
-    <br>
-    <label for="form-group">Email Address</label>
-      <input
-        required
-        type="email"
-        id="email"
-        ngModel
-        name="email">
-    <br>
-    <button
-      class="btn btn-primary btn-group"
-      type="submit"
-    >Submit</button>
-  </form>
-</div>
+
+<registration-header
+  [routerLink]="['/login']"
+  headerText="Login Page"
+  logo="insert logo url here"></registration-header>
+<form (ngSubmit)="handleSignup(f)" #f="ngForm">
+  <label>Username</label>
+    <input
+      required
+      type="text"
+      id="username"
+      ngModel
+      name="username">
+  <br>
+  <label>Password</label>
+    <input
+      required
+      type="password"
+      id="password"
+      ngModel
+      name="password">
+  <br>
+  <label>Email Address</label>
+    <input
+      required
+      type="email"
+      id="email"
+      ngModel
+      name="email">
+  <br>
+  <button
+    type="submit"
+  >Sign Up</button>
+</form>
