--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -46,7 +46,7 @@
 <div class="container row modalWrapper" [style.display]="getStyle()">
   <div class="bigWrapper">
     <form
-      (ngSubmit)="submitMessage(f)" #f="ngForm"
+      (ngSubmit)="submitMessage(messageForm.value)" #messageForm="ngForm"
         class="container row modalContent">
       <span (click)="toggleMessageModal()">&times;</span>
       <div class="container row miniWrapper">
@@ -64,7 +64,7 @@
 <div *ngIf="!!isShowBookingModal">
   <form (ngSubmit)="submitBooking(bookingForm.value)" #bookingForm="ngForm">
     Enter a time and date you would like your hair cut:
-    <input name="time" type="date" ngModel />
+    <input name="time" type="date" [(ngModel)]="time" />
     Where would you like your hair cut? Enter an address.
     <input name="location" ngModel />
     <button type="submit">Book</button>
