--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -31,8 +31,8 @@
 
 
 
-        <div>
-          <h5>Email Address</h5>
+        <div class="email">
+          <h5>Email</h5>
             <input
               required
               type="email"
