--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -28,9 +28,6 @@
                 name="password">
           </div>
         </div>
-
-
-
         <div class="email">
           <h5>Email</h5>
             <input
@@ -48,4 +45,5 @@
       >Sign Up</button>
     </div>
   </div>
+  <a [routerLink]="['/signupstylist']">Sign Up As a Stylist</a>
 </div>
