--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -1,44 +1,16 @@
-h3 {
-  flex: 1 1 100%;
-}
-
-input {
-  background-color: #d3d3d3;
-}
-
-.poppaDiv {
-  width: 100%;
+.componentWrapper {
+  display: flex;
+  flex-direction: column;
+  background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  background-image: linear-gradient(215deg, #f2efc7 0%, #ffeee2 100%);
-  padding: 1em;
+  color: white;
 }
 
-.myForm {
-  height: 100%;
-  flex: 1 1 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.spanContainer {
-  padding: 2em;
+.header {
   height: 25%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.spanContainer > * {
-  flex: 1 1 25%;
-  padding: .10em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding-top: 10em;
+  margin-left: 2em;
+  margin-right: 2em;
+  width: 83%;
+  align-self: center;
 }
