--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,4 +1,4 @@
-<customer-navbar [customerId]="customerId"></customer-navbar>
+<customer-navbar></customer-navbar>
 <div class="poppaDiv">
   <div class="profileContainer">
     <img class="profileImg" [src]="profile.url" />
