--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -3,66 +3,65 @@
     class="header"
     [routerLink]="['/login']"></registration-header>
   <div class="formWrapper">
-
-    <form (ngSubmit)="handleSignup(f)" #f="ngForm">
-      <div>
-        <h3>Please Enter Your User Info</h3>
+    <h3>Please Enter Your User Info</h3>
+    <form class="myForm" (ngSubmit)="handleSignup(f)" #f="ngForm">
+      <div class="usernamePassword">
+        <h5>Username</h5>
+          <input
+            required
+            type="text"
+            id="username"
+            ngModel
+            name="username">
+        <h5>Password</h5>
+          <input
+            required
+            type="password"
+            id="password"
+            ngModel
+            name="password">
       </div>
-      <label>Username</label>
-        <input
-          required
-          type="text"
-          id="username"
-          ngModel
-          name="username">
-      <br>
-      <label>Password</label>
-        <input
-          required
-          type="password"
-          id="password"
-          ngModel
-          name="password">
-      <br>
-      <label>Email Address</label>
-        <input
-          required
-          type="email"
-          id="email"
-          ngModel
-          name="email">
-      <br>
-      <label>Billing Address</label>
-        <input
-          required
-          type="address"
-          id="address"
-          ngModel
-          name="address">
-      <br>
-      <label>Link to Personal Site (optional)</label>
-        <input
-          required
-          type="url"
-          id="url"
-          ngModel
-          name="url">
-      <br>
-      <label>Please select a list of services you offer</label>
-        <span class="spanContainer">
-          <span *ngFor="let service of stylesPlaceHolder">
-            <input
-              type="checkbox"
-              id="service"
-              ngModel
-              [name]="service.id"
-            >{{ service.servicename }}
-          </span>
-      </span>
-  <!-- <div *ngFor="let stylist of stylistsCloseToYou"> -->
-      <button
-        type="submit"
-      >Submit</button>
+      <div class="emailWebsite">
+        <h5>Email Address</h5>
+          <input
+            required
+            type="email"
+            id="email"
+            ngModel
+            name="email">
+        <h5>Link to Personal Site (optional)</h5>
+          <input
+            required
+            type="url"
+            id="url"
+            ngModel
+            name="url">
+      </div>
+      <div class="billingAddress">
+        <h5>Billing Address</h5>
+          <input
+            required
+            type="address"
+            id="address"
+            ngModel
+            name="address">
+      </div>
+      <div class="spanContainer">
+        <h5>Types of Services</h5>
+        <span *ngFor="let service of stylesPlaceHolder">
+          <input
+            type="checkbox"
+            id="service"
+            ngModel
+            [name]="service.id"
+          >{{ service.servicename }}
+        </span>
+      </div>
+      <div class="buttonContainer">
+        <button
+          type="submit"
+        >Submit</button>
+      </div>
     </form>
   </div>
 </div>
