Adjust width and display flex on username and password components

--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -31,4 +31,22 @@
 
 .usernamePassword {
   border: 2px solid red;
+  display: flex;
+}
+
+.username {
+  flex: 1 1 50%;
+}
+
+.password {
+  flex: 1 1 50%;
+  border: 2px solid red;
+}
+
+.username input {
+  width: 85%;
+}
+
+.password input {
+  width: 85%;
 }
