--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -6,20 +6,24 @@
     <h3>Please Enter Your User Info</h3>
     <form class="myForm" (ngSubmit)="handleSignup(f)" #f="ngForm">
       <div class="usernamePassword">
-        <h5>Username</h5>
-          <input
-            required
-            type="text"
-            id="username"
-            ngModel
-            name="username">
-        <h5>Password</h5>
-          <input
-            required
-            type="password"
-            id="password"
-            ngModel
-            name="password">
+        <div class="username">
+          <h5>Username</h5>
+            <input
+              required
+              type="text"
+              id="username"
+              ngModel
+              name="username">
+        </div>
+        <div class="password">
+          <h5>Password</h5>
+            <input
+              required
+              type="password"
+              id="password"
+              ngModel
+              name="password">
+        </div>
       </div>
       <div class="emailWebsite">
         <h5>Email Address</h5>
