--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -26,20 +26,24 @@
         </div>
       </div>
       <div class="emailWebsite">
-        <h5>Email Address</h5>
-          <input
-            required
-            type="email"
-            id="email"
-            ngModel
-            name="email">
-        <h5>Link to Personal Site (optional)</h5>
-          <input
-            required
-            type="url"
-            id="url"
-            ngModel
-            name="url">
+        <div class="email">
+          <h5>Email Address</h5>
+            <input
+              required
+              type="email"
+              id="email"
+              ngModel
+              name="email">
+        </div>
+        <div class="website">
+          <h5>Link to Personal Site (optional)</h5>
+            <input
+              required
+              type="url"
+              id="url"
+              ngModel
+              name="url">
+        </div>
       </div>
       <div class="billingAddress">
         <h5>Billing Address</h5>
